<resources>
    <string name="app_name">Şirâ</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_advert">AdvertActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">profile</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="title_activity_adapter">adapter</string>
    <string name="title_activity_katagoriactivity">katagoriactivity</string>
    <string name="loading">Loading…</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person"> Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="krediye_uygun">Krediye Uygun:</string>
    <string name="oda_say_s">Oda Sayısı:</string>
    <string name="lan_tipi">İlan Tipi:</string>
    <string name="m_aral">m² Aralığı:</string>
    <string name="fiyat_aral">Fiyat Aralığı:</string>
    <string name="lan_a_klama">İlan Açıklama:</string>
    <string name="konum">Konum</string>
    <string name="fiyat">Fiyat</string>
    <string name="m">m²</string>
    <string name="teklif_fiyat">Teklif Fiyatı</string>
    <string name="teklif_a_klamas">Teklif Açıklaması</string>
    <string name="a_klama">Açıklama</string>
    <string name="model_aral">Model Aralığı</string>
    <string name="marka">Marka</string>
    <string name="yak_t">Yakıt</string>
    <string name="vites">Vites</string>
    <string name="kasa_tipi">Kasa Tipi</string>
    <string name="eki">Çekiş</string>
    <string name="motor_hacmi">Motor Hacmi</string>
    <string name="model">Model</string>
    <string name="ehir">Şehir</string>

</resources>
