<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_advert_car"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/unselected_color"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgbtn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:minHeight="50dp"
                        android:minWidth="50dp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@color/black" />

                    <ImageView
                        android:id="@+id/userprofil_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/aliciadi"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="25sp" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/ilankonum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/unselected_color"
                    android:gravity="center"
                    android:text="@string/konum"
                    android:textSize="20sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/add_advert_left"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center"
                            android:text="@string/fiyat_aral" />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center"
                            android:text="@string/model_aral" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center"
                            android:text="@string/lan_tipi" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center"
                            android:text="@string/marka" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center"
                            android:text="@string/yak_t" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center"
                            android:text="@string/vites" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center"
                            android:text="@string/kasa_tipi" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center"
                            android:text="@string/eki" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center"
                            android:text="@string/motor_hacmi" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/add_advert_left"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/fiyataraligi_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center" />

                        <TextView
                            android:id="@+id/modelaraligi_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center" />

                        <TextView
                            android:id="@+id/ilantipi_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center" />

                        <TextView
                            android:id="@+id/marka_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center" />

                        <TextView
                            android:id="@+id/yakıt_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center" />

                        <TextView
                            android:id="@+id/vites_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center" />

                        <TextView
                            android:id="@+id/kasatipi_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center" />

                        <TextView
                            android:id="@+id/cekis_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center" />

                        <TextView
                            android:id="@+id/motorhacmi_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/ilanaciklama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="@dimen/add_advert_left"
                    android:layout_marginRight="@dimen/add_advert_left"
                    android:layout_marginTop="2dp"
                    android:gravity="center_vertical"
                    android:text="@string/lan_a_klama" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/frame"
                android:name="com.ecommerce.bitirme.ecommerce.Fragments.OfferFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/unselected_color" />
        </LinearLayout>
    </ScrollView>

    <Button

        android:id="@+id/faballadvert"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="Teklif ver"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />
</android.support.design.widget.CoordinatorLayout>