<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/teklifveren_imgbtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <View
                android:layout_width="1dp"
                android:layout_height="50dp"
                android:layout_gravity="center" />

            <ImageButton
                android:id="@+id/offersArama_imgbtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_call_black_24dp" />

            <TextView
                android:id="@+id/teklifverenad_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="25sp" />


        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/add_advert_left"
                android:layout_marginRight="@dimen/add_advert_right"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/fiyat" />

                <TextView
                    android:id="@+id/fiyatbilgi_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="0.5"
                    android:gravity="center" />

                <EditText
                    android:id="@+id/fiyataraligi_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="0.5"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/add_advert_left"
                android:layout_marginRight="@dimen/add_advert_right"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/m" />

                <TextView
                    android:id="@+id/m2bilgi_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="0.5"
                    android:gravity="center" />

                <EditText
                    android:id="@+id/m2aralig_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="0.5"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/add_advert_left"
                android:layout_marginRight="@dimen/add_advert_right"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="Teklif Tarihi" />

                <TextView
                    android:id="@+id/tekliftarihi_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="0.5"
                    android:gravity="center" />

                <EditText
                    android:id="@+id/tekliftarihi_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="0.5"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/add_advert_left"
                android:layout_marginRight="@dimen/add_advert_right"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ilanaciklama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/a_klama" />

                <TextView
                    android:id="@+id/aciklama_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="0.5"
                    android:gravity="center" />

                <EditText
                    android:id="@+id/aciklama_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="0.5"
                    android:gravity="center" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
